# NobiamHub

./: README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/inbuiltmods/: CMakeLists.txt
app_backup/src/main/java/org/levimc/launcher/core/minecraft/: GamePackageManager.kt
app_backup/src/main/res/values/: strings.xml
minecraft/: build.gradle
minecraft/src/main/java/com/mojang/minecraftpe/: HardwareInformation.java  MainActivity.java
